fixed letter spacing of titles

--- a/src/index.css
+++ b/src/index.css
@@ -164,7 +164,7 @@ body {
     padding-left: 1.5rem;
     font-weight: 700;
     font-size: 1.5rem;
-    letter-spacing: 2px;
+    letter-spacing: 0px;
 }
 
 .icon {
